// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SizeStandardsTool EmployeesScreen should match snapshot 1`] = `
<div
  className="screen"
>
  <h2>
    How many employees?
  </h2>
  <div
    className="employeesInput"
  >
    <label
      htmlFor="employees"
    >
      Number of employees
    </label>
    <input
      id="employees"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      type="text"
      value=""
    />
  </div>
  <p>
    This should be the average number of full-time or part-time 
    <br />
    employees over the last 12 months.
  </p>
  <button
    autoFocus={false}
    className="LargePrimaryButton  button"
    disabled={true}
    formTarget="_self"
    id={undefined}
    onKeyPress={[Function]}
    onTouchTap={[Function]}
    tabIndex="0"
  >
    SEE RESULTS
  </button>
</div>
`;

exports[`SizeStandardsTool NaicsScreen should match snapshot 1`] = `
<div
  className="screen"
>
  <h2>
    What's your industry?
  </h2>
  <div>
    <ul
      className="naicsCodesList"
    >
      <li>
        <div
          className="naicsSection"
        >
          <div
            className="left"
          >
            <p>
              <span>
                 
              </span>
            </p>
            <p>
              Dry Pea and Bean Farming
            </p>
          </div>
          <div
            className="right"
          >
            <a
              className="remove"
              onClick={[Function]}
              onKeyPress={[Function]}
              tabIndex="0"
            >
              <i
                aria-hidden="true"
                className="fa fa-times"
              />
            </a>
          </div>
        </div>
      </li>
    </ul>
  </div>
  <div>
    <div
      className="naicsCodeInput"
    >
      <div
        className="loading"
      >
        <p>
          ...loading suggestions...
        </p>
      </div>
    </div>
  </div>
  <div>
    <button
      autoFocus={false}
      className="LargePrimaryButton  button"
      disabled={undefined}
      formTarget="_self"
      id={undefined}
      onKeyPress={[Function]}
      onTouchTap={[Function]}
      tabIndex="0"
    >
      Next
    </button>
  </div>
</div>
`;

exports[`SizeStandardsTool RevenueScreen should match snapshot 1`] = `
<div
  className="screen"
>
  <h2>
    How much revenue?
  </h2>
  <div
    className="revenueInput"
  >
    <label
      htmlFor="revenue"
    >
      Annual Revenue
    </label>
    <input
      id="revenue"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseUp={[Function]}
      placeholder="$"
      type="text"
      value=""
    />
  </div>
  <p>
    This caption will help a small business understand 
    <br />
    what information we're looking for.
  </p>
  <button
    autoFocus={false}
    className="LargePrimaryButton  button"
    disabled={true}
    formTarget="_self"
    id={undefined}
    onKeyPress={[Function]}
    onTouchTap={[Function]}
    tabIndex="0"
  >
    SEE RESULTS
  </button>
</div>
`;

exports[`SizeStandardsTool StartScreen should match snapshot 1`] = `
<div>
  <h2>
    Size Standards Tool
  </h2>
  <img
    src="test-file-stub"
  />
  <p>
    Do you qualify as a small business?
  </p>
  <button
    autoFocus={false}
    className="LargePrimaryButton  button"
    disabled={undefined}
    formTarget="_self"
    id={undefined}
    onKeyPress={[Function]}
    onTouchTap={[Function]}
    tabIndex="0"
  >
    Start
  </button>
</div>
`;

exports[`SizeStandardsTool should match snapshot 1`] = `
<div
  className="sizeStandardsTool"
  id="size-standards-tool"
  tabIndex="-1"
>
  <div
    className="startSection"
  >
    <div>
      <h2>
        Size Standards Tool
      </h2>
      <img
        src="test-file-stub"
      />
      <p>
        Do you qualify as a small business?
      </p>
      <button
        autoFocus={false}
        className="LargePrimaryButton  button"
        disabled={undefined}
        formTarget="_self"
        id={undefined}
        onKeyPress={[Function]}
        onTouchTap={[Function]}
        tabIndex="0"
      >
        Start
      </button>
    </div>
  </div>
</div>
`;
